z-index fix

--- a/rockpack/mainsite/static/assets/weblight/css/app.less
+++ b/rockpack/mainsite/static/assets/weblight/css/app.less
@@ -1218,6 +1218,12 @@ footer {
     div {
       margin: 0 25px 25px 25px;
       width: 265px;
+
+      .videocelltitle {
+        margin: 0;
+        padding: 10px;
+        width: 245px;
+      }
     }
   }
 }
@@ -1252,6 +1258,12 @@ footer {
 }
 
 @media (max-width: 767px) {
+
+  #topnav {
+    height: 50px;
+    background: #fff;
+    margin: 0 auto;
+  }
 
   .wrapper {
     width: 95%;
